<resources>
    <string name="app_name">Flower Shop</string>
    <string name="empty_text_line1">The list is empty.</string>
    <string name="empty_text_line2">Add flowers with add button.</string>
    <string name="insert_demo">Insert demo data</string>
    <string name="delete_all">Delete all data</string>
    <string name="all_delete_message">All flowers successfully deleted</string>
    <string name="nothing_delete">Looks like there was nothing flower to delete</string>
    <string name="delete_failed">Delete failed</string>
    <string name="delete_successful">Delete successful</string>
    <string name="delete_dialog_message">Delete this flower?</string>
    <string name="button_delete">Delete</string>
    <string name="button_cancel">Cancel</string>
    <string name="editor_add_flower">Add new flower</string>
    <string name="editor_edit_flower">Edit flower</string>
    <string name="unsaved_message">Discard your changes?</string>
    <string name="button_discard">Discard</string>
    <string name="button_keep_editing">Keep editing</string>
    <string name="message_error_saving">Error with saving flower. All data must be provided.</string>
    <string name="message_error_updating">Error with updating flower. All data must be provided.</string>
    <string name="message_saved">Flower saved</string>
    <string name="message_updated">Flower updated</string>
    <string name="stock_text">left in Stock</string>
    <string name="dollar">$</string>
    <string name="price">Price:</string>
    <string name="button_plus">+</string>
    <string name="button_minus">-</string>
    <string name="stock_text_multiline">left in\nStock</string>
    <string name="supplier_name">Supplier Name:</string>
    <string name="supplier_phone">Supplier Phone:</string>
    <string name="button_edit">Edit</string>
    <string name="hint_number">5</string>
    <string name="hint_name">Pink Rose</string>
    <string name="hint_desc">Cupcake ipsum dolor sit amet. Danish gingerbread donut liquorice bonbon chocolate bar apple pie sweet roll sweet.</string>
    <string name="button_save">Save</string>
    <string name="toast">Flower requires all information be</string>
    <string name="demo_supplier_name" />
    <string name="demo_supplier_phone" />
</resources>

