<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:gravity="left"
        android:layout_alignParentLeft="true">

        <ImageView
            android:id="@+id/image"
            android:layout_width="@dimen/image_width"
            android:layout_height="@dimen/image_height"
            android:layout_margin="@dimen/margin_10"
            android:scaleType="centerCrop"
            android:src="@drawable/rose" />


        <LinearLayout
            android:id="@+id/price_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/name_and_desc"
            android:layout_alignParentTop="true"
            android:layout_marginTop="@dimen/margin_31"
            android:background="@drawable/round_background"
            android:orientation="vertical"
            android:layout_alignRight="@+id/name_and_desc">

            <TextView
                android:id="@+id/dollar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@drawable/round_background"
                android:fontFamily="@font/raleway"
                android:paddingLeft="@dimen/margin_10"
                android:paddingRight="@dimen/text_padding"
                android:text="@string/price"
                android:textColor="@color/textDark"
                android:textSize="@dimen/text_18" />


            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/round_background"
                android:fontFamily="@font/raleway"
                android:paddingBottom="@dimen/padding"
                android:paddingLeft="@dimen/margin_10"
                android:paddingRight="@dimen/margin_10"
                android:textColor="@color/textDark"
                android:textSize="@dimen/text_36"
                android:layout_gravity="center_horizontal"
                tools:text="5" />


        </LinearLayout>

        <Button
            android:id="@+id/button_increase"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/quantity_layout"
            android:layout_marginStart="@dimen/margin_28"
            android:background="@drawable/round_background"
            android:fontFamily="@font/raleway"
            android:text="@string/button_plus"
            android:textColor="@color/textDark"
            android:textSize="@dimen/text_36"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/margin_28" />

        <LinearLayout
            android:id="@+id/quantity_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margin_168"
            android:background="@drawable/round_background">

            <TextView
                android:id="@+id/quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/round_background"
                android:fontFamily="@font/raleway"
                android:paddingBottom="@dimen/padding"
                android:paddingLeft="@dimen/margin_10"
                android:paddingRight="@dimen/margin_10"
                android:textColor="@color/textDark"
                android:textSize="@dimen/text_36"
                tools:text="5" />

            <TextView
                android:id="@+id/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@drawable/round_background"
                android:fontFamily="@font/raleway"
                android:paddingLeft="@dimen/margin_10"
                android:paddingRight="@dimen/text_padding"
                android:text="@string/stock_text_multiline"
                android:textColor="@color/textDark"
                android:textSize="@dimen/text_14" />
        </LinearLayout>

        <Button
            android:id="@+id/button_decrease"
            android:layout_width="@dimen/margin_54"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/button_delete"
            android:layout_alignTop="@+id/button_increase"
            android:background="@drawable/round_background"
            android:fontFamily="@font/raleway"
            android:text="@string/button_minus"
            android:textColor="@color/textDark"
            android:textSize="@dimen/text_36"
            android:layout_alignRight="@+id/button_delete" />

        <TextView
            android:id="@+id/category_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button_increase"
            android:layout_centerHorizontal="true"
            android:background="@drawable/round_background"
            android:fontFamily="@font/raleway"
            android:layout_marginTop="@dimen/text_padding"
            android:paddingBottom="@dimen/padding"
            android:paddingLeft="@dimen/margin_25"
            android:paddingRight="@dimen/margin_25"
            android:paddingTop="@dimen/padding"
            android:textColor="@color/textDark"
            android:textSize="@dimen/text_14"
            tools:text="Rose" />

        <LinearLayout
            android:id="@+id/name_and_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_padding"
            android:layout_marginLeft="@dimen/text_padding"
            android:layout_marginRight="@dimen/text_padding"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/category_name"
            android:background="@drawable/round_background"
            android:orientation="vertical"
            android:layout_alignParentLeft="true">

            <TextView
                android:id="@+id/product_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_background"
                android:fontFamily="@font/greatvibes"
                android:gravity="center_horizontal"
                android:textColor="@color/textDark"
                android:textSize="@dimen/text_big"
                tools:text="Pink rose" />

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_background"
                android:fontFamily="@font/raleway"
                android:gravity="center_horizontal"
                android:padding="@dimen/padding"
                android:textColor="@color/textDark"
                android:textSize="@dimen/text_14"
                tools:text="Cupcake ipsum dolor sit amet. Danish gingerbread donut liquorice bonbon chocolate bar apple pie sweet roll sweet." />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/supplier_info_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/name_and_desc"
            android:layout_marginLeft="@dimen/text_padding"
            android:layout_marginRight="@dimen/text_padding"
            android:layout_marginTop="@dimen/text_padding"
            android:background="@drawable/round_background"
            android:orientation="vertical"
            android:paddingBottom="@dimen/padding"
            android:layout_alignParentLeft="true">

            <LinearLayout
                android:id="@+id/supplier_name_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_background">

                <TextView
                    android:id="@+id/supplier"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/padding"
                    android:background="@drawable/round_background"
                    android:fontFamily="@font/raleway"
                    android:padding="@dimen/padding"
                    android:text="@string/supplier_name"
                    android:textColor="@color/textDark"
                    android:textSize="@dimen/text_14" />

                <TextView
                    android:id="@+id/supplier_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_10"
                    android:background="@drawable/round_background"
                    android:fontFamily="@font/raleway"
                    android:padding="@dimen/padding"
                    android:textColor="@color/textDark"
                    android:textSize="@dimen/text_14"
                    tools:text="Virágszínpad Kft., Sárisáp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/supplier_phone_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_background">

                <TextView
                    android:id="@+id/supplier_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/padding"
                    android:background="@drawable/round_background"
                    android:fontFamily="@font/raleway"
                    android:padding="@dimen/padding"
                    android:text="@string/supplier_phone"
                    android:textColor="@color/textDark"
                    android:textSize="@dimen/text_14" />

                <TextView
                    android:id="@+id/supplier_phonenumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_10"
                    android:background="@drawable/round_background"
                    android:fontFamily="@font/raleway"
                    android:padding="@dimen/padding"
                    android:textColor="@color/textDark"
                    android:textSize="@dimen/text_14"
                    tools:text="06203733135" />
            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/button_edit"
            android:layout_width="100dp"
            android:layout_height="53dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/supplier_info_layout"
            android:layout_marginStart="@dimen/margin_111"
            android:layout_marginTop="@dimen/text_padding"
            android:background="@drawable/round_shape"
            android:fontFamily="@font/raleway"
            android:text="@string/button_edit"
            android:textAllCaps="false"
            android:textColor="@color/textLight"
            android:textSize="@dimen/text_normal"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/margin_111" />

        <Button
            android:id="@+id/button_delete"
            android:layout_width="101dp"
            android:layout_height="53dp"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/supplier_info_layout"
            android:layout_marginEnd="@dimen/margin_22"
            android:layout_marginTop="@dimen/text_padding"
            android:background="@drawable/round_shape"
            android:fontFamily="@font/raleway"
            android:text="@string/button_delete"
            android:textAllCaps="false"
            android:textColor="@color/textLight"
            android:textSize="@dimen/text_normal"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/margin_22" />

    </RelativeLayout>

</ScrollView>